refactor: resolve mapping conflicts and complete missing Swagger endpoints