@@ -1,5 +1,7 @@
 package com.re.ecommerce.modules.cart.controller;
 
+import io.swagger.v3.oas.annotations.tags.Tag;
+
 import com.re.ecommerce.modules.cart.dto.request.CartItemRequest;
 import com.re.ecommerce.modules.cart.dto.request.CartItemUpdateQuantityRequest;
 import com.re.ecommerce.modules.cart.dto.response.CartResponse;
@@ -20,6 +22,7 @@ import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.UUID;
 
+@Tag(name = "9. Cart")
 @RestController
 @RequestMapping("/api/v1/cart")
 @RequiredArgsConstructor
@@ -29,32 +32,28 @@ public class CartController {
     private final CartService cartService;
     private final UserRepository userRepository;
 
+    private record CartIdentity(UUID customerId, byte[] guestTokenHash) {}
+
+    private CartIdentity resolveIdentity(String guestToken) {
+        UUID customerId = extractCustomerId();
+        byte[] guestTokenHash = hashToken(guestToken);
+        validateIdentifiers(customerId, guestTokenHash);
+        return new CartIdentity(customerId, guestTokenHash);
+    }
+
     @GetMapping
     public ResponseEntity<CartResponse> getCart(
             @RequestHeader(value = "X-Guest-Token", required = false) String guestToken) {
-        
-        UUID customerId = extractCustomerId();
-        byte[] guestTokenHash = hashToken(guestToken);
-        log.debug("Fetching cart for Customer: {}, GuestToken: {}", customerId, guestTokenHash != null);
-        
-        validateIdentifiers(customerId, guestTokenHash);
-        
-        return ResponseEntity.ok(cartService.getCart(customerId, guestTokenHash));
+        var identity = resolveIdentity(guestToken);
+        return ResponseEntity.ok(cartService.getCart(identity.customerId(), identity.guestTokenHash()));
     }
 
     @PostMapping("/items")
     public ResponseEntity<CartResponse> addItem(
             @RequestHeader(value = "X-Guest-Token", required = false) String guestToken,
             @Valid @RequestBody CartItemRequest request) {
-        
-        UUID customerId = extractCustomerId();
-        byte[] guestTokenHash = hashToken(guestToken);
-        log.info("Adding variant ID {} to cart. Customer: {}, Guest: {}", request.getProductVariantId(), customerId, guestTokenHash != null);
-        
-        validateIdentifiers(customerId, guestTokenHash);
-        
-        CartResponse response = cartService.addItem(customerId, guestTokenHash, request);
-        return ResponseEntity.ok(response);
+        var identity = resolveIdentity(guestToken);
+        return ResponseEntity.ok(cartService.addItem(identity.customerId(), identity.guestTokenHash(), request));
     }
 
     @PatchMapping("/items/{cartItemId}")
@@ -62,68 +61,42 @@ public class CartController {
             @RequestHeader(value = "X-Guest-Token", required = false) String guestToken,
             @PathVariable UUID cartItemId,
             @Valid @RequestBody CartItemUpdateQuantityRequest request) {
-        
-        UUID customerId = extractCustomerId();
-        byte[] guestTokenHash = hashToken(guestToken);
-        log.info("Updating quantity for cartItem ID {} to {}", cartItemId, request.getQuantity());
-        
-        validateIdentifiers(customerId, guestTokenHash);
-        
-        CartResponse response = cartService.updateItemQuantity(customerId, guestTokenHash, cartItemId, request);
-        return ResponseEntity.ok(response);
+        var identity = resolveIdentity(guestToken);
+        return ResponseEntity.ok(cartService.updateItemQuantity(identity.customerId(), identity.guestTokenHash(), cartItemId, request));
     }
 
     @DeleteMapping("/items/{cartItemId}")
     public ResponseEntity<Void> removeItem(
             @RequestHeader(value = "X-Guest-Token", required = false) String guestToken,
             @PathVariable UUID cartItemId) {
-        
-        UUID customerId = extractCustomerId();
-        byte[] guestTokenHash = hashToken(guestToken);
-        log.info("Removing cartItem ID {} from cart", cartItemId);
-        
-        validateIdentifiers(customerId, guestTokenHash);
-        
-        cartService.removeItem(customerId, guestTokenHash, cartItemId);
+        var identity = resolveIdentity(guestToken);
+        cartService.removeItem(identity.customerId(), identity.guestTokenHash(), cartItemId);
         return ResponseEntity.noContent().build();
     }
 
     @DeleteMapping("/items")
     public ResponseEntity<Void> clearCart(
             @RequestHeader(value = "X-Guest-Token", required = false) String guestToken) {
-        
-        UUID customerId = extractCustomerId();
-        byte[] guestTokenHash = hashToken(guestToken);
-        log.info("Clearing active cart items for Customer: {}, Guest: {}", customerId, guestTokenHash != null);
-        
-        validateIdentifiers(customerId, guestTokenHash);
-        
-        cartService.clearCart(customerId, guestTokenHash);
+        var identity = resolveIdentity(guestToken);
+        cartService.clearCart(identity.customerId(), identity.guestTokenHash());
         return ResponseEntity.noContent().build();
     }
 
     @PostMapping("/merge")
     public ResponseEntity<CartResponse> mergeCart(
             @RequestHeader(value = "X-Guest-Token", required = true) String guestToken) {
-        
         UUID customerId = extractCustomerId();
         if (customerId == null) {
             log.error("Failed to merge cart: Customer is not fully authenticated");
             throw new UnprocessableEntityException("GUEST_MERGE_ERROR", "User must be authenticated to merge a guest cart");
         }
-        
-        byte[] guestTokenHash = hashToken(guestToken);
-        log.info("Merging guest token cart into customer {} cart", customerId);
-        
-        CartResponse response = cartService.mergeCart(customerId, guestTokenHash);
-        return ResponseEntity.ok(response);
+        return ResponseEntity.ok(cartService.mergeCart(customerId, hashToken(guestToken)));
     }
 
     private UUID extractCustomerId() {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
         if (auth != null && auth.isAuthenticated() && !"anonymousUser".equals(auth.getPrincipal())) {
-            String username = auth.getName();
-            return userRepository.findByUsername(username)
+            return userRepository.findByUsername(auth.getName())
                     .map(User::getId)
                     .orElse(null);
         }
@@ -131,12 +104,11 @@ public class CartController {
     }
 
     private byte[] hashToken(String token) {
-        if (token == null || token.trim().isEmpty()) {
+        if (token == null || token.isBlank()) {
             return null;
         }
         try {
-            MessageDigest digest = MessageDigest.getInstance("SHA-256");
-            return digest.digest(token.getBytes(StandardCharsets.UTF_8));
+            return MessageDigest.getInstance("SHA-256").digest(token.getBytes(StandardCharsets.UTF_8));
         } catch (NoSuchAlgorithmException e) {
             log.error("SHA-256 algorithm missing during token hashing", e);
             throw new RuntimeException("SHA-256 algorithm not available", e);
